# multiagent-coder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: README-seed.md
.github/workflows/: ci.yml
examples/: fizzbuzz_task.md  two_sum_task.md
src/mac/: __init__.py  agents.py  cli.py  config.py  llm.py  orchestrator.py  sandbox.py  state.py
src/mac/prompts/: agents.yaml
tests/: test_config.py  test_language_extract.py  test_llm_parse.py  test_programmer_coerce.py  test_sandbox.py
